Fix z-index to allow menu in contact form

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -29,6 +29,7 @@
     background: #ba963a;
     width: 100%;
     position: fixed;
+    z-index: 2;
 }
 
 
