--- a/src/components/site.module.scss
+++ b/src/components/site.module.scss
@@ -106,7 +106,8 @@ text-decoration: none;}
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
-	position: fixed;
+  position: fixed;
+  z-index: 1;
 	top: 0;
 	left: 0;
 	right: 0;
